--- a/src/app/student/pages/student-details/student-details.component.html
+++ b/src/app/student/pages/student-details/student-details.component.html
@@ -1,3 +1,5 @@
 <button mat-raised-button (click)="goBack()"><mat-icon>arrow_back</mat-icon></button>
 <p>student-details works!</p>
 {{student$ | async | json}}
+
+<app-student-card [selectedStudent]="student$ | async" (recieved)="showRecievedValue($event)"></app-student-card>
