--- a/src/app/core/components/navigation/navigation.component.html
+++ b/src/app/core/components/navigation/navigation.component.html
@@ -11,6 +11,8 @@
     <mat-nav-list>
       <a mat-list-item href="/lane">Lane</a>
       <a mat-list-item href="/champion">Champions</a>
+      <a mat-list-item target="_blank" href="https://duquesne-guillaume.web.app/#home">Mon E-CV</a>
+
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
